--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script:
   - ansible-playbook --syntax-check tests/role.yml
   - ansible-playbook --sudo -v --diff tests/role.yml
   - >
-    ansible-playbook --sudo tests/role.yml
+    ansible-playbook --sudo -v --diff tests/role.yml
