--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,4 +19,5 @@ bind_config_acls: []
 bind_config_notify: 'no'
 bind_config_querylog: 'no'
 bind_config_disable_default_zones: false
+bind_config_disable_bind_keys: false
 bind_config_version: false
