--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,3 +22,4 @@ bind_config_querylog: 'no'
 bind_config_disable_default_zones: false
 bind_config_version: false
 bind_config_transfer_source: false
+bind_config_disable_default_keys: false
